Changed: Migration to Java 21 (OFBIZ-13306)
Migration to Java 21

Thanks: Jacques for the warnings work and Nicolas.

# Conflicts:
#	framework/base/src/test/java/org/apache/ofbiz/base/util/collections/FlexibleMapAccessorTests.java
#	framework/base/src/test/java/org/apache/ofbiz/base/util/string/FlexibleStringExpanderTests.java