@@ -435,7 +435,7 @@ public class UtilCodec {
             Debug.logError("Canonicalization (format consistency, character escaping that is mixed or double, etc) "
                     + "error for attribute named [" + valueName + "], String [" + value + "]: " + e.toString(), MODULE);
             String issueMsg = null;
-            if (locale.equals(new Locale("test"))) { // labels are not available in testClasses Gradle task
+            if (locale.equals(Locale.of("test"))) { // labels are not available in testClasses Gradle task
                 issueMsg = "In field [" + valueName + "] found character escaping (mixed or double) "
                         + "that is not allowed or other format consistency error: ";
             } else {
@@ -448,7 +448,7 @@ public class UtilCodec {
         // check for "<", ">"
         if (value.indexOf("<") >= 0 || value.indexOf(">") >= 0) {
             String issueMsg = null;
-            if (locale.equals(new Locale("test"))) { // labels are not available in testClasses Gradle task
+            if (locale.equals(Locale.of("test"))) { // labels are not available in testClasses Gradle task
                 issueMsg = "In field [" + valueName + "] less-than (<) and greater-than (>) symbols are not allowed.";
             } else {
                 issueMsg = UtilProperties.getMessage("SecurityUiLabels", "PolicyNoneLess-thanGreater-than",
@@ -462,7 +462,7 @@ public class UtilCodec {
         if (JS_EVENT_LIST.stream().anyMatch(str -> StringUtils.containsIgnoreCase(str, onEvent))
                 || value.contains("seekSegmentTime")) {
             String issueMsg = null;
-            if (locale.equals(new Locale("test"))) { // labels are not available in testClasses Gradle task
+            if (locale.equals(Locale.of("test"))) { // labels are not available in testClasses Gradle task
                 issueMsg = "In field [" + valueName + "] Javascript events are not allowed.";
             } else {
                 issueMsg = UtilProperties.getMessage("SecurityUiLabels", "PolicyNoneJsEvents",
@@ -500,7 +500,7 @@ public class UtilCodec {
         PolicyFactory policy = null;
         try {
             Class<?> customPolicyClass = null;
-            if (locale.equals(new Locale("test"))) { // labels are not available in testClasses Gradle task
+            if (locale.equals(Locale.of("test"))) { // labels are not available in testClasses Gradle task
                 customPolicyClass = Class.forName("org.apache.ofbiz.base.html.CustomSafePolicy");
             } else {
                 customPolicyClass = Class.forName(UtilProperties.getPropertyValue("owasp", "sanitizer.custom.safe.policy.class"));
@@ -565,7 +565,7 @@ public class UtilCodec {
             // Maybe later we will figure out that some more HTML entities will need to be added to here, see OFBIZ-12691
             if (filtered != null && !value.replace("&#39;", "'").replace("&#34;", "\"").replace("&#64;", "@").equals(unescapeEcmaScriptAndHtml4)) {
                 String issueMsg = null;
-                if (locale.equals(new Locale("test"))) { // labels are not available in testClasses Gradle task
+                if (locale.equals(Locale.of("test"))) { // labels are not available in testClasses Gradle task
                     issueMsg = "In field [" + valueName + "] by our input policy, your input has not been accepted "
                             + "for security reason. Please check and modify accordingly, thanks.";
                 } else {
