@@ -192,7 +192,7 @@ public class OfbizCurrencyTransform implements TemplateTransformModel {
                             // we set the max to 10 digits as an hack to not round numbers in the ui
                         }
                     } else {
-                        out.write(UtilFormatOut.formatCurrency(amount, isoCode, new Locale(locale), rounding));
+                        out.write(UtilFormatOut.formatCurrency(amount, isoCode, Locale.of(locale), rounding));
                         // we set the max to 10 digits as an hack to not round numbers in the ui
                     }
                 } catch (TemplateModelException e) {
